--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ whitenoise==6.6.0
 django-compressor==4.4
 django-browser-reload==1.12.1
 django-cors-headers==4.0.0
-django-extensions
+django-extensions==3.1.5
