--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ django-compressor==4.4
 django-browser-reload==1.12.1
 django-cors-headers==4.0.0
 django-extensions==3.1.5
+setuptools
+wheel
+gunicorn
