Pridėtas db.sqlite3 į .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10781,3 +10781,4 @@ venv/Lib/site-packages/django_cors_headers-4.6.0.dist-info/REQUESTED
 venv/Lib/site-packages/django_cors_headers-4.6.0.dist-info/top_level.txt
 venv/Lib/site-packages/django_cors_headers-4.6.0.dist-info/WHEEL
 db.sqlite3
+db.sqlite3
