--- a/.gitignore
+++ b/.gitignore
@@ -10782,3 +10782,4 @@ venv/Lib/site-packages/django_cors_headers-4.6.0.dist-info/top_level.txt
 venv/Lib/site-packages/django_cors_headers-4.6.0.dist-info/WHEEL
 db.sqlite3
 db.sqlite3
+*.sqlite3
